@@ -1,3 +1,12 @@
+Tue Jul 28 14:04:29 1998  Ross Johnson  <rpj@swan.canberra.edu.au>
+
+	* private.c: Added detailed explanation of the new thread
+	allocation scheme.
+	(_pthread_new_thread): Totally rewritten to use
+	new thread allocation scheme.
+	(_pthread_delete_thread): Ditto.
+	(_pthread_find_thread): Obsolete.
+
 Mon Jul 27 17:46:37 1998  Ross Johnson  <rpj@swan.canberra.edu.au>
 
 	* create.c (pthread_create): Start of rewrite. Not completed yet.
